# FilmRatingFinder

./: .gitignore  README.md  film_searching.py  main.py  package-lock.json  pyproject.toml  requirements.txt  test.py
venc/: pyvenv.cfg
venc/Scripts/: activate  activate.bat
