[tool.poetry]
name = "filmratingfinder"
version = "0.1.0"
description = ""
authors = ["Sophia Ignatiadi <sphignatiadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
IMDbPY = "^2021.4.18"
rotten_tomatoes_client = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
